--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -23,5 +23,9 @@
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <!-- Arquivo principal do SPA -->
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
+  <script src="{% static 'client_pong/js/landing.js' %}"></script>
+  <script src="{% static 'client_pong/js/home.js' %}"></script>
+  <script src="{% static 'client_pong/js/chat.js' %}"></script>
+  <script src="{% static 'client_pong/js/chat.js' %}"></script>
 </body>
 </html>
