--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -7,6 +7,8 @@
   <title>Meu SPA em Vanilla JS</title>
   <!-- Bootstrap (opcional) -->
   <link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
+
+  <link rel="stylesheet" href="{% static 'client_pong/css/user-profile.css' %}">
 </head>
 <body>
   <!-- Navbar fixa para usuários logados -->
