fix match history loading

--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -20,6 +20,7 @@
   <!-- Bootstrap JS (opcional) -->
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <!-- Arquivo principal do SPA -->
+  <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
 </body>
 </html>
