add local match

--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
 
   <link rel="stylesheet" href="{% static 'client_pong/css/user-profile.css' %}">
+  <link rel="stylesheet" href="{% static 'client_pong/css/local-match.css' %}">
 </head>
 <body>
   <!-- Navbar fixa para usuários logados -->
@@ -20,6 +21,7 @@
   <!-- Bootstrap JS (opcional) -->
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <!-- Arquivo principal do SPA -->
+  <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
 </body>
