tournaments layout, botão com defeito

--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -23,6 +23,7 @@
   <!-- Arquivo principal do SPA -->
   <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
+  <script src="{% static 'client_pong/js/tournaments.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
 </body>
 </html>
