--- a/server-pong/client_pong/static/client_pong/css/local-match.css
+++ b/server-pong/client_pong/static/client_pong/css/local-match.css
@@ -28,3 +28,26 @@
 .controls {
   text-align: center;
 }
+
+#game-container {
+  position: relative;
+}
+
+#game-over-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+}
+
+#game-over-message.d-none {
+  display: none;
+}
