--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -17,6 +17,9 @@
 
   <!-- Container principal do SPA -->
   <div id="root" class="container mt-4"></div>
+  
+  <!-- Container para toasts -->
+  <div id="toast-container"></div>
 
   <!-- Bootstrap JS (opcional) -->
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
@@ -24,5 +27,7 @@
   <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
+  <!-- Script do WebSocketManager -->
+  <script src="{% static 'client_pong/js/webSocketProvider.js' %}"></script>
 </body>
 </html>
