--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -21,6 +21,12 @@
   <!-- Bootstrap JS (opcional) -->
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <!-- Arquivo principal do SPA -->
+  <script src="{% static 'client_pong/js/websocket.js' %}"></script>
+  <script src="{% static 'client_pong/js/chat.js' %}"></script>
+  <script src="{% static 'client_pong/js/userActions.js' %}"></script>
+  <script src="{% static 'client_pong/js/playerList.js' %}"></script>
+  <script src="{% static 'client_pong/js/home.js' %}"></script>
+  <script src="{% static 'client_pong/js/ranking.js' %}"></script>
   <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
