homepage :house: done :rocket: :white_check_mark:

--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap (opcional) -->
   <link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
 
+  <link rel="stylesheet" href="{% static 'client_pong/css/home.css' %}">
   <link rel="stylesheet" href="{% static 'client_pong/css/user-profile.css' %}">
   <link rel="stylesheet" href="{% static 'client_pong/css/local-match.css' %}">
 
