--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -33,6 +33,8 @@
   <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/home.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
+  <script src="{% static 'client_pong/js/tournaments.js' %}"></script>
+  <script src="{% static 'client_pong/js/ranking.js' %}"></script>
   
   <script src="https://unpkg.com/i18next@22.4.9/i18next.min.js"></script>
   <script src="{% static 'client_pong/locales/i18n.js' %}"></script>
