--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -19,7 +19,7 @@
 
   <!-- Container principal do SPA -->
   <div id="root" class="container mt-4"></div>
-  
+
   <!-- Container para toasts -->
   <div id="toast-container"></div>
 
@@ -33,7 +33,8 @@
   <script src="{% static 'client_pong/js/local-match.js' %}"></script>
   <script src="{% static 'client_pong/js/home.js' %}"></script>
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
-  
+  <script src="{% static 'client_pong/js/game.js' %}"></script>
+
   <script src="https://unpkg.com/i18next@22.4.9/i18next.min.js"></script>
   <script src="{% static 'client_pong/locales/i18n.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
