adjust docker to run new frontend

--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -27,6 +27,7 @@
   <script src="{% static 'client_pong/vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Arquivo principal do SPA -->
+  <script src="{% static 'client_pong/js/confi.js' %}"></script>
   <script src="{% static 'client_pong/js/chat.js' %}"></script>
   <script src="{% static 'client_pong/js/playerList.js' %}"></script>
   <script src="{% static 'client_pong/js/home.js' %}"></script>
