--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -8,6 +8,22 @@
   <!-- Bootstrap (opcional) -->
   <link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
 
+  <!-- Bootstrap CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeo+2zZBqLYiX9nEXNn3LI0FZlIom/ncoF5TTdEpLRy6TKS5"
+    crossorigin="anonymous"
+  />
+
+  <!-- Bootstrap JS (com Bundle para habilitar Toasts, Popovers, etc.) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6N5V8E2wGl+YtIY08Q7AnQL7Iq8L"
+    crossorigin="anonymous">
+  </script>
+
+
   <link rel="stylesheet" href="{% static 'client_pong/css/home.css' %}">
   <link rel="stylesheet" href="{% static 'client_pong/css/user-profile.css' %}">
   <link rel="stylesheet" href="{% static 'client_pong/css/local-match.css' %}">
@@ -27,7 +43,7 @@
   <script src="{% static 'client_pong/vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
 
   <!-- Arquivo principal do SPA -->
-  <script src="{% static 'client_pong/js/confi.js' %}"></script>
+  <script src="{% static 'client_pong/js/config.js' %}"></script>
   <script src="{% static 'client_pong/js/chat.js' %}"></script>
   <script src="{% static 'client_pong/js/playerList.js' %}"></script>
   <script src="{% static 'client_pong/js/home.js' %}"></script>
@@ -37,8 +53,6 @@
   <script src="{% static 'client_pong/js/game.js' %}"></script>
   <script src="{% static 'client_pong/js/tournaments.js' %}"></script>
 
-  <script src="https://unpkg.com/i18next@22.4.9/i18next.min.js"></script>
-  <script src="{% static 'client_pong/locales/i18n.js' %}"></script>
   <script src="{% static 'client_pong/js/spa.js' %}"></script>
   <!-- Script do WebSocketManager -->
   <script src="{% static 'client_pong/js/webSocketProvider.js' %}"></script>
