--- a/server-pong/client_pong/templates/client_pong/index.html
+++ b/server-pong/client_pong/templates/client_pong/index.html
@@ -26,6 +26,9 @@
   <!-- Bootstrap JS (opcional) -->
   <script src="{% static 'client_pong/vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
 
+  <!-- THREE.js globalmente -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.js"></script>
+
   <!-- Arquivo principal do SPA -->
   <script src="{% static 'client_pong/js/chat.js' %}"></script>
   <script src="{% static 'client_pong/js/playerList.js' %}"></script>
@@ -34,6 +37,7 @@
   <script src="{% static 'client_pong/js/user-profile.js' %}"></script>
   <script src="{% static 'client_pong/js/game.js' %}"></script>
   <script src="{% static 'client_pong/js/tournaments.js' %}"></script>
+  <script src="{% static 'client_pong/js/game3D.js' %}"></script>
 
   <script src="https://unpkg.com/i18next@22.4.9/i18next.min.js"></script>
   <script src="{% static 'client_pong/locales/i18n.js' %}"></script>
